2017-02-28  Charlie Zender  <zender@uci.edu>

	* Define vrs_prn before referencing in ncclimo, ncremap

	* Change timestamp printing switch from --prn_timestamp to --cal and synonyms

2017-02-28 Henry Butowsky  <henryb@hush.com>

	* Added timestamp printing capability to ncks

2017-02-24  Charlie Zender  <zender@uci.edu>

	* Add --version option to ncclimo, ncremap

2017-02-23  Charlie Zender  <zender@uci.edu>

	* Prettify ncclimo self-documentation

2017-02-17  Charlie Zender  <zender@uci.edu>

	* Turn-off whiteboard latitude circle routine until devise fix for Sungduk's POP case

2017-02-15  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.5-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.5-alpha02 final changes';git push
	git tag -a 4.6.5-alpha02 -m 'Version 4.6.5-alpha02 new features: where() fix for vpointers';git push --tags

2017-02-13 Henry Butowsky  <henryb@hush.com>

	* Modify where_assign() method in grammar so that it can handle vpointers in where() body

2017-02-10  Charlie Zender  <zender@uci.edu>

	* Restore correct values for three_dmn_rec_var in in.cdl that were inadvertently changed in 4.6.4

2017-02-09  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.5-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.5-alpha01 final changes';git push
	git tag -a 4.6.5-alpha01 -m 'Version 4.6.5-alpha01 new features: re-introduce fixed USE_NC4_SRD_WORKAROUND';git push --tags

2017-02-08  Charlie Zender  <zender@uci.edu>

	* Re-instate USE_NC4_SRD_WORKAROUND only when strided dimension is first dimension

2017-02-07  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.4 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.4 final changes';git push
	git tag -a 4.6.4 -m 'Version 4.6.4 new features: splitter, stdin, clm_md=dly, cll_msr, frm_trm, cln=365 and srd fixes';git push --tags

	* NCO 4.6.4-beta02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.4-beta02 final changes';git push